--- a/Console Demo-DevTools/fundamentals3.html
+++ b/Console Demo-DevTools/fundamentals3.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Love JS</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <script>
-    function favoriteAnimal(smallPet) {
-    return smallPet + " is my favorite animal!"
-  }
- 
-  console.log(favoriteAnimal('Rabbit'))
-  </script>
-</body>
+        //function favoriteAnimal(smallPet) {
+            //return smallPet + " is my favorite animal!"
+            //}
+
+      //console.log(favoriteAnimal('Rabbit'))
+      //function add7(numberSeven) {
+        //return numberSeven + 7
+      //}
+      //console.log(add7(7))
+
+      //function multiply(firstNumb, secondNumb) {
+        //return firstNumb * secondNumb
+      //}
+      //console.log(multiply(7, 7))
+      
+      function capitalize(){
+        let string = "seven";
+        let newString = string.toUpperCase()[0];
+        return newString;
+		}
+		
+		console.log(capitalize());
+    </script>
+  </body>
 </html>
