--- a/Console Demo-DevTools/fundamentals3.html
+++ b/Console Demo-DevTools/fundamentals3.html
@@ -56,13 +56,25 @@
 
     
 
-      function lastLetter(myWord) {
-        let letter = myWord.slice(-1);
-        return letter;
-    }
-    console.log(lastLetter('SevenSevvenSevvven'));
+      //function lastLetter(myWord) {
+        //let letter = myWord.slice(-1);
+        //return letter;
+    //}
+    //console.log(lastLetter('SevenSevvenSevvven'));
 
+    let answer = parseInt(prompt("Please enter the number you would like to FizzBuzz up to: "));
     
+    for (let i = 1; i <= answer; i++) {
+      if (i % 3 === 0 && i % 5 === 0) {
+        console.log("FizzBuzz");
+      } else if (i % 3 === 0) {
+        console.log("Fizz");
+      } else if (i % 5 === 0) {
+        console.log("Buzz");
+      } else {
+      console.log(i);
+     }
+    }
     </script>
   </body>
 </html>
