add Console Tricks.html

--- a/Console Demo-DevTools/Console Tricks.html
+++ b/Console Demo-DevTools/Console Tricks.html
@@ -22,9 +22,13 @@
         console.log('hello');
 
         //Interpolated
-        console.log('Hello, I am a ');
+        console.log('Hello, I am a %s string!', '💩');
+
+        //Styled
+        console.log('%c I am some great text', 'font-size: 20px');
 
         
+
         
 
 
