add Console Tricks.html

--- a/Console Demo-DevTools/Console Tricks.html
+++ b/Console Demo-DevTools/Console Tricks.html
@@ -22,14 +22,21 @@
         console.log('hello');
 
         //Interpolated
-        console.log('Hello, I am a %s string!', '💩');
+        console.log('Hello, I am a %s string!', '"bb"');
 
         //Styled
-        console.log('%c I am some great text', 'font-size: 20px');
+        //console.log('%c I am some great text', 'font-size: 20px; background: red; text-shadow: 10px 10px 0 blue')
 
-        
+        //warning!
+        console.warn('OH NOOO');
 
+        //Error :/
+        console.error('Sorry, but error)');
+
+        //Info
+        console.info('Crocodiles eat 3-4 people per year');
         
+        //Testing
 
 
 
