--- a/Console Demo-DevTools/Console Tricks.html
+++ b/Console Demo-DevTools/Console Tricks.html
@@ -37,10 +37,52 @@
         console.info('Crocodiles eat 3-4 people per year');
         
         //Testing
+        const p = document.querySelector('p');
+        console.assert(p.classList.contains('ouch'), 'That is wrong!');
+        //You did not select the right element!');
 
+        //clearing
+        console.clear();
 
+        //Viewing DOM Elements
+        console.log(p);
+        console.dir(p);
 
+        console.clear();
 
+        //Grouping together
+        dogs.forEach(dog => {
+            //console.group(`${dog.name}`);
+            console.groupCollapsed(`${dog.name}`);
+            console.log(`This is ${dog.name}`);
+            console.log(`This is ${dog.name} is ${dog.age} years old`);
+            console.log(`This is ${dog.name} is ${dog.age * 7} years old`);
+            console.groupEnd(`${dog.name}`);
+        } );
+
+        //counting
+        console.count('Wes');
+        console.count('Wes');
+        console.count('Steve');
+        console.count('Steve');
+        console.count('Wes');
+        console.count('Steve');
+        console.count('Wes');
+        console.count('Steve');
+        console.count('Steve');
+        console.count('Steve');
+        console.count('Steve');
+
+        //timing
+        console.time('fetching data');
+        fetch('https://api.github.com/users/wesbos')
+        .then(data => data.json())
+        .then(data => {
+            console.timeEnd('fetching data');
+            console.log(data);
+        });
+
+        console.table(dogs)
     </script>
 </body>
 </html>
