--- a/Fundamentals-Part-1-2/DOM.html
+++ b/Fundamentals-Part-1-2/DOM.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM Elements</title>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js" defer></script>
   </head>
   <body>
     <h1>THE TITLE OF YOUR WEBPAGE</h1>
